frontend-EJS-nodejs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-nodejs
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-nodejs
  template:
    metadata:
      labels:
        app: frontend-nodejs
    spec:
      serviceAccountName: app-service-account # Re-added the ServiceAccount
      containers:
        - name: nodejsApp
          image: ghcr.io/nadav07/app-image:latest
          ports:
            - containerPort: 3000 # Updated container port
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
