frontend-EJS-nodejs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodejs-service
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: frontend-nodejs
