frontend-EJS-nodejs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: app-nodejs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-nodejs-service
                port:
                  number: 80
